--- a/.classpath
+++ b/.classpath
@@ -15,11 +15,10 @@
 	<classpathentry kind="lib" path="lib/dexlib2-2.0b5-dev.jar" sourcepath="/Users/karim/Documents/workspace/smali/dexlib2/src/main/java"/>
 	<classpathentry kind="lib" path="lib/baksmali-2.0b5.jar"/>
 	<classpathentry kind="lib" path="lib/guava-15.0.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/soot-infoflow-android"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/soot-infoflow"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/probe"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/soot"/>
 	<classpathentry kind="lib" path="lib/axml-1.0.jar"/>
 	<classpathentry kind="lib" path="googleplay/com.turbochilli.unrollme.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/soot-infoflow"/>
+	<classpathentry kind="lib" path="lib/wala-static.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
