--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,10 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/bcel-5.2.jar" sourcepath="lib/bcel-5.2-src.zip"/>
 	<classpathentry kind="src" path="dat"/>
-	<classpathentry kind="lib" path="lib/sootclasses-2.5.0.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/soot"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/soot-infoflow"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/soot-infoflow-android"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/probe"/>
 	<classpathentry kind="lib" path="lib/jasminclasses.jar" sourcepath="lib/jasminsrc-2.5.0.jar"/>
 	<classpathentry kind="lib" path="lib/polyglotclasses-1.3.5.jar" sourcepath="lib/polyglotsrc-1.3.5.jar"/>
 	<classpathentry kind="lib" path="lib/gxl.jar"/>
@@ -15,10 +18,8 @@
 	<classpathentry kind="lib" path="lib/dexlib2-2.0b5-dev.jar" sourcepath="/Users/karim/Documents/workspace/smali/dexlib2/src/main/java"/>
 	<classpathentry kind="lib" path="lib/baksmali-2.0b5.jar"/>
 	<classpathentry kind="lib" path="lib/guava-15.0.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/probe"/>
 	<classpathentry kind="lib" path="lib/axml-1.0.jar"/>
 	<classpathentry kind="lib" path="googleplay/com.turbochilli.unrollme.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/soot-infoflow"/>
 	<classpathentry kind="lib" path="lib/wala-static.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
