--- a/dat/averroes.properties
+++ b/dat/averroes.properties
@@ -1,5 +1,8 @@
-main_class = ca.uwaterloo.averroes.AndroidDummyMainClass
-android_path = android
+application_includes = dacapo.luindex.*:dacapo.lusearch.*:org.apache.lucene.**
+main_class = dacapo.lusearch.Main2
+input_jar_files = benchmarks/dacapo/lusearch.jar
+library_jar_files = benchmarks/dacapo/lusearch-deps.jar
+dynamic_classes_file = benchmarks/dacapo/lusearch.dyn
+tamiflex_facts_file = benchmarks/dacapo/lusearch.tfx
 output_dir = output
-apk_location = googleplay/com.turbochilli.unrollme.apk
-application_includes = ca.uwaterloo.averroes.AndroidDummyMainClass:com.turbochilli.unrollme.**
+jre = jre/rt-1.4.2_11.jar
