--- a/dat/averroes.properties
+++ b/dat/averroes.properties
@@ -1,8 +1,8 @@
-application_includes = dacapo.luindex.*:dacapo.lusearch.*:org.apache.lucene.**
-main_class = dacapo.lusearch.Main2
-input_jar_files = benchmarks/dacapo/lusearch.jar
-library_jar_files = benchmarks/dacapo/lusearch-deps.jar
-dynamic_classes_file = benchmarks/dacapo/lusearch.dyn
-tamiflex_facts_file = benchmarks/dacapo/lusearch.tfx
+application_includes = dacapo.antlr.*:antlr.**
+main_class = dacapo.antlr.Main2
+input_jar_files = benchmarks/dacapo/antlr.jar
+library_jar_files = benchmarks/dacapo/antlr-deps.jar
+dynamic_classes_file = benchmarks/dacapo/antlr.dyn
+tamiflex_facts_file = benchmarks/dacapo/antlr.tfx
 output_dir = output
 jre = jre/rt-1.4.2_11.jar
