--- a/dat/averroes.properties
+++ b/dat/averroes.properties
@@ -1,8 +1,8 @@
-application_includes = dacapo.antlr.*:antlr.**
-main_class = dacapo.antlr.Main2
-input_jar_files = benchmarks/dacapo/antlr.jar
-library_jar_files = benchmarks/dacapo/antlr-deps.jar
-dynamic_classes_file = benchmarks/dacapo/antlr.dyn
-tamiflex_facts_file = benchmarks/dacapo/antlr.tfx
+application_includes = dacapo.pmd.*:net.sourceforge.pmd.**
+main_class = dacapo.pmd.Main2
+input_jar_files = benchmarks/dacapo/pmd.jar
+library_jar_files = benchmarks/dacapo/pmd-deps.jar
+dynamic_classes_file = benchmarks/dacapo/pmd.dyn
+tamiflex_facts_file = benchmarks/dacapo/pmd.tfx
 output_dir = output
 jre = jre/rt-1.4.2_11.jar
