updated properties files for benchmarks to make Averroes more precise wrt which classes it considers to be part of the application code

--- a/properties/dacapo/luindex.properties
+++ b/properties/dacapo/luindex.properties
@@ -1,4 +1,4 @@
-application_includes = dacapo.luindex.*:dacapo.lusearch.*:org.apache.lucene.**
+application_includes = dacapo.luindex.*:org.apache.lucene.**
 main_class = dacapo.luindex.Main2
 input_jar_files = benchmarks/dacapo/luindex.jar
 library_jar_files = benchmarks/dacapo/luindex-deps.jar
