--- a/properties/dacapo/lusearch.properties
+++ b/properties/dacapo/lusearch.properties
@@ -1,4 +1,4 @@
-application_includes = dacapo.luindex.*:dacapo.lusearch.*:org.apache.lucene.**
+application_includes = dacapo.lusearch.*:org.apache.lucene.**
 main_class = dacapo.lusearch.Main2
 input_jar_files = benchmarks/dacapo/lusearch.jar
 library_jar_files = benchmarks/dacapo/lusearch-deps.jar
