--- a/properties/specjvm/jess.properties
+++ b/properties/specjvm/jess.properties
@@ -1,4 +1,4 @@
-application_includes = spec.benchmarks._202_jess.*
+application_includes = spec.benchmarks._202_jess.**
 main_class = spec.benchmarks._202_jess.Main
 input_jar_files = benchmarks/specjvm/jess.zip
 library_jar_files = benchmarks/specjvm/spec.zip:benchmarks/specjvm/sunrsasign.jar
