--- a/properties/dacapo/bloat.properties
+++ b/properties/dacapo/bloat.properties
@@ -1,4 +1,4 @@
-application_includes = dacapo.bloat.*:EDU.**
+application_includes = dacapo.bloat.*:EDU.purdue.cs.bloat.**
 main_class = dacapo.bloat.Main2
 input_jar_files = benchmarks/dacapo/bloat.jar
 library_jar_files = benchmarks/dacapo/bloat-deps.jar
